--- a/public/angular/directives/flow/flow-browser/flow-browser.html
+++ b/public/angular/directives/flow/flow-browser/flow-browser.html
@@ -1,5 +1,15 @@
 <div class="flow-browser">
+
+
     <div class="btn-toolbar drawer-controls">
+        <div class="btn-group">
+             <button class="btn btn-default btn-sm">
+                 <i class="fa fa-code-fork"></i>
+             </button>
+            <button class="btn btn-default btn-sm">
+                <i class="fa fa-code"></i>
+            </button>
+        </div>
         <div class="btn-group">
             <button class="btn btn-default btn-sm" ng-click="maximized = !maximized">
                 <i class="fa fa-lg" ng-class="{'fa-angle-double-down' : maximized, 'fa-angle-double-up' : !maximized}"></i>
