--- a/public/angular/directives/flow/flow-browser/flow-browser.html
+++ b/public/angular/directives/flow/flow-browser/flow-browser.html
@@ -3,11 +3,14 @@
 
     <div class="btn-toolbar drawer-controls">
         <div class="btn-group">
-             <button class="btn btn-default btn-sm">
-                 <i class="fa fa-code-fork"></i>
+             <button class="btn btn-default btn-sm" ng-click="setActiveTab('nodes')" ng-class="{'active' : activeTab.name === 'nodes'}">
+                 <i class="fa fa-code-fork fa-lg"></i>
              </button>
-            <button class="btn btn-default btn-sm">
-                <i class="fa fa-code"></i>
+            <button class="btn btn-default btn-sm" ng-click="setActiveTab('shared')" ng-class="{'active' : activeTab.name === 'shared'}">
+                <i class="fa fa-users fa-lg"></i>
+            </button>
+            <button class="btn btn-default btn-sm" ng-click="setActiveTab('debug')" ng-class="{'active' : activeTab.name === 'debug'}">
+                <i class="fa fa-code fa-lg"></i>
             </button>
         </div>
         <div class="btn-group">
@@ -17,13 +20,7 @@
         </div>
     </div>
     <div class="drawer" ng-class="{maximized: maximized}">
-        <ul>
-            <li class="flow-node-type" ng-repeat="flowNodeType in flowNodeTypes"
-                ng-click="addFlowNodeType(flowNodeType)">
-                <div class="node-thumbnail"
-                     style="background-image: url(http://octoblu-devices.s3.amazonaws.com/beaglebone.png);"></div>
-                <label class="text-center">{{flowNodeType.name || flowNodeType.type}}</label>
-            </li>
-        </ul>
+        <div ng-include="activeTab.template"></div>
     </div>
+
 </div>
