--- a/public/pages/flow-node-editor.html
+++ b/public/pages/flow-node-editor.html
@@ -3,10 +3,7 @@
     <div class="panel-heading">Edit Node</div>
     <div class="panel-body">
       <form class="form">
-        <div ng-if="flowNodeType" ng-include="flowNodeType.formTemplatePath"></div>
-        <div ng-if="flowNode.type === 'channel'">
-            <endpoint-selector ng-model="flowNode"></endpoint-selector>
-        </div>
+        <div ng-include="flowNodeType.formTemplatePath"></div>
         <div class="form-group debug-node-form">
           <label for="debug-node">Debug</label>
           <input  id="debug-node" class="form-control" type="checkbox" ng-model="flowNode.debug">
