Adding debugging to the flow-browser

--- a/public/angular/directives/flow/flow-browser/flow-browser-nodes.html
+++ b/public/angular/directives/flow/flow-browser/flow-browser-nodes.html
@@ -1,4 +1,4 @@
-<ul>
+<ul class="flow-browser-nodes">
     <li class="flow-node-type" ng-repeat="flowNodeType in flowNodeTypes"
         ng-click="addFlowNodeType(flowNodeType)">
         <div class="node-thumbnail"
