--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -68,5 +68,5 @@
             <flow-editor flow="activeFlow"></flow-editor>
         </div>
     </div>
-    <flow-browser flow="activeFlow" flow-node-types="flowNodeTypes"></flow-browser>
+    <flow-browser flow="activeFlow" debug-lines="debugLines" flow-node-types="flowNodeTypes"></flow-browser>
 </div>
