Scroll the console

--- a/public/angular/directives/flow/flow-browser/flow-browser-nodes.html
+++ b/public/angular/directives/flow/flow-browser/flow-browser-nodes.html
@@ -2,7 +2,7 @@
     <li class="flow-node-type" ng-repeat="flowNodeType in flowNodeTypes"
         ng-click="addFlowNodeType(flowNodeType)">
         <div class="node-thumbnail"
-             style="background-image: url(http://octoblu-devices.s3.amazonaws.com/beaglebone.png);"></div>
+             style="background-image: url({{flowNodeType.logo}});"></div>
         <label class="text-center">{{flowNodeType.name || flowNodeType.type}}</label>
     </li>
 </ul>
