--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -5,10 +5,22 @@
         <img src="/assets/images/octoblu.png" height="50px"/>
     </div>
     <div class="flow-toolbar">
+        <div class="btn-group" dropdown is-open="menuIsOpen">
+            <button class="btn btn-default button-shadow dropdown-toggle" tooltip="Menu" tooltip-placement="bottom" ng-click="menuIsOpen = !menuIsOpen">
+                <i class="fa fa-bars"></i>
+            </button>
+            <ul class="dropdown-menu" role="menu">
+              <li><a href ui-sref="ob.connector.nodes.all">Connect</a></li>
+              <li><a href ui-sref="ob.process">Process</a></li>
+              <li><a href ui-sref="ob.admin.all">Admin</a></li>
+              <li><a href ui-sref="ob.community">Community</a></li>
+            </ul>
+        </div>
+
         <div class="input-group flow-name" dropdown>
             <input type="text" class="form-control" placeholder="Flow Name" ng-model="activeFlow.name">
             <span class="input-group-addon btn btn-sm btn-danger" ng-click="deleteFlow(activeFlow)">
-                    <i class="fa fa-lg fa-trash-o"></i>
+                <i class="fa fa-lg fa-trash-o"></i>
             </span>
             <span class="input-group-addon flow-dropdown" dropdown-toggle>
                 <i class="fa fa-lg fa-angle-down"></i>
