--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -1,84 +1,67 @@
-<div class="design2 designer-container full-height"
-     w-mousetrap="{'mod+c':copySelection, 'mod+x': cutSelection, 'mod+v':pasteSelection, 'backspace': deleteSelection, 'del': deleteSelection}">
+<div class="design2 designer-container full-height" w-mousetrap="{'mod+c':copySelection, 'mod+x': cutSelection, 'mod+v':pasteSelection, 'backspace': deleteSelection, 'del': deleteSelection}">
+  <div class="logo-toolbar">
+    <img src="/assets/images/octoblu.png" height="50px"/>
+  </div>
 
-    <div class="logo-toolbar">
-        <img src="/assets/images/octoblu.png" height="50px"/>
-    </div>
-    <div class="flow-toolbar">
-        <div class="btn-group" dropdown is-open="menuIsOpen">
-            <button class="btn btn-default button-shadow dropdown-toggle" tooltip="Menu" tooltip-placement="bottom" ng-click="menuIsOpen = !menuIsOpen">
-                <i class="fa fa-bars"></i>
-            </button>
-            <ul class="dropdown-menu" role="menu">
-              <li><a href ui-sref="ob.connector.nodes.all">Connect</a></li>
-              <li><a href ui-sref="ob.process">Process</a></li>
-              <li><a href ui-sref="ob.admin.all">Admin</a></li>
-              <li><a href ui-sref="ob.community">Community</a></li>
-            </ul>
-        </div>
-
-        <div class="input-group flow-name" dropdown>
-            <input type="text" class="form-control" placeholder="Flow Name" ng-model="activeFlow.name">
-            <span class="input-group-addon btn btn-sm btn-danger" ng-click="deleteFlow(activeFlow)">
-                <i class="fa fa-lg fa-trash-o"></i>
-            </span>
-            <span class="input-group-addon flow-dropdown" dropdown-toggle>
-                <i class="fa fa-lg fa-angle-down"></i>
-            </span>
-            <ul class="dropdown-menu" role="menu">
-                <li class="text-center" ng-click="addFlow()"><a class="fa fa-plus" href></a></li>
-                <li role="presentation" class="divider"></li>
-                <li class="text-center" ng-click="setActiveFlow(flow)" ng-repeat="flow in flows | orderBy: 'name'"><a
-                        href>{{flow.name}}</a></li>
-            </ul>
-        </div>
-
-
-        <div class="btn-group">
-            <button ng-click="zoomIn()" w-mousetrap="{'+' : zoomIn, '=' : zoomIn}"
-                    class="btn btn-default button-shadow" tooltip="Zoom In" tooltip-placement="bottom">
-                <i class="fa fa-plus"></i>
-            </button>
-            <button ng-click="zoomOut()" w-mousetrap="{'-' : zoomOut, '_' : zoomOut}"
-                    class="btn btn-default button-shadow" tooltip="Zoom Out" tooltip-placement="bottom">
-                <i class="fa fa-minus"></i>
-            </button>
-        </div>
-
-
-        <!--<div class="btn-group">-->
-        <!--<button type="button" class="btn btn-default dropdown-toggle button-shadow" data-toggle="dropdown"-->
-        <!--tooltip="Other Flows" tooltip-placement="bottom">-->
-        <!--<i class="fa fa-th-large fa-lg"></i>-->
-        <!--</button>-->
-        <!--<ul class="dropdown-menu dropdown-menu-right flow-menu" role="menu">-->
-        <!--<li class="flow-menu-item" ng-repeat="flow in flows">-->
-        <!--<a href ng-click="setActiveFlow(flow)">{{flow.name}}</a>-->
-        <!--</li>-->
-        <!--</ul>-->
-        <!--</div>-->
-        <div class="btn-group">
-            <button ng-click="restart()" class="btn btn-default button-shadow" tooltip="Restart"
-                    tooltip-placement="bottom">
-                <i class="fa fa-repeat"></i>
-            </button>
-            <button ng-click="stop()" class="btn btn-default button-shadow" tooltip="Stop"
-                    tooltip-placement="bottom">
-                <i class="fa fa-stop"></i>
-            </button>
-            <button ng-click="start()" class="btn btn-default button-shadow" tooltip="Start"
-                    tooltip-placement="bottom">
-                <i class="fa fa-play"></i>
-            </button>
-        </div>
+  <div class="flow-toolbar">
+    <div class="btn-group" dropdown is-open="menuIsOpen">
+      <button class="btn btn-default button-shadow dropdown-toggle" tooltip="Menu" tooltip-placement="left" ng-click="menuIsOpen = !menuIsOpen">
+        <i class="fa fa-bars"></i>
+      </button>
+      <ul class="dropdown-menu" role="menu">
+        <li><a href ui-sref="ob.connector.nodes.all">Connect</a></li>
+        <li><a href ui-sref="ob.process">Process</a></li>
+        <li><a href ui-sref="ob.admin.all">Admin</a></li>
+        <li><a href ui-sref="ob.community">Community</a></li>
+      </ul>
     </div>
 
-    <flow-editor-omnibox flow="activeFlow" flow-node-types="flowNodeTypes"></flow-editor-omnibox>
-
-    <div class="full-height" ng-mousemove="setMousePosition($event)" ng-mouseout="clearMousePosition()">
-        <div class="workspace-container full-height">
-            <flow-editor flow="activeFlow"></flow-editor>
-        </div>
+    <div class="input-group flow-name" dropdown>
+      <input type="text" class="form-control" placeholder="Flow Name" ng-model="activeFlow.name">
+      <span class="input-group-addon btn btn-sm btn-danger" ng-click="deleteFlow(activeFlow)" tooltip="Delete Flow" tooltip-placement="bottom">
+        <i class="fa fa-lg fa-trash-o"></i>
+      </span>
+      <span class="input-group-addon flow-dropdown" dropdown-toggle>
+        <i class="fa fa-lg fa-angle-down"></i>
+      </span>
+      <ul class="dropdown-menu" role="menu">
+        <li class="text-center" ng-click="addFlow()"><a class="fa fa-plus" href></a></li>
+        <li role="presentation" class="divider"></li>
+        <li class="text-center" ng-click="setActiveFlow(flow)" ng-repeat="flow in flows | orderBy: 'name'">
+          <a href>{{flow.name}}</a>
+        </li>
+      </ul>
     </div>
-    <flow-browser flow="activeFlow" debug-lines="debugLines" flow-node-types="flowNodeTypes"></flow-browser>
+
+
+    <div class="btn-group">
+      <button ng-click="zoomIn()" w-mousetrap="{'+' : zoomIn, '=' : zoomIn}" class="btn btn-default button-shadow" tooltip="Zoom In" tooltip-placement="bottom">
+        <i class="fa fa-plus"></i>
+      </button>
+      <button ng-click="zoomOut()" w-mousetrap="{'-' : zoomOut, '_' : zoomOut}" class="btn btn-default button-shadow" tooltip="Zoom Out" tooltip-placement="bottom">
+        <i class="fa fa-minus"></i>
+      </button>
+    </div>
+
+    <div class="btn-group">
+      <button ng-click="restart()" class="btn btn-default button-shadow" tooltip="Restart" tooltip-placement="bottom">
+        <i class="fa fa-repeat"></i>
+      </button>
+      <button ng-click="stop()" class="btn btn-default button-shadow" tooltip="Stop" tooltip-placement="bottom">
+        <i class="fa fa-stop"></i>
+      </button>
+      <button ng-click="start()" class="btn btn-default button-shadow" tooltip="Start" tooltip-placement="bottom">
+        <i class="fa fa-play"></i>
+      </button>
+    </div>
+  </div>
+
+  <flow-editor-omnibox flow="activeFlow" flow-node-types="flowNodeTypes"></flow-editor-omnibox>
+
+  <div class="full-height" ng-mousemove="setMousePosition($event)" ng-mouseout="clearMousePosition()">
+    <div class="workspace-container full-height">
+      <flow-editor flow="activeFlow"></flow-editor>
+    </div>
+  </div>
+  <flow-browser flow="activeFlow" debug-lines="debugLines" flow-node-types="flowNodeTypes"></flow-browser>
 </div>
