Fancy syntax highlighting for console

--- a/public/pages/flow-browser-debug.html
+++ b/public/pages/flow-browser-debug.html
@@ -1,5 +1,5 @@
 <ul class="flow-browser-debug">
-    <li ng-repeat="debug in debugLines">
-        <pre>{{debug | json}}</pre>
-    </li>
+  <li ng-repeat="debug in debugLines">
+    <prism code="debug"></prism>
+  </li>
 </ul>
