--- a/public/pages/flow-browser.html
+++ b/public/pages/flow-browser.html
@@ -1,18 +1,22 @@
 <div class="flow-browser">
   <div class="btn-toolbar drawer-controls">
-    <div class="btn-group">
-      <button class="btn btn-default btn-sm" ng-click="setActiveTab('nodes')" ng-class="{'active' : activeTab.name === 'nodes'}" tooltip="Available Node" tooltip-placement="top" >
-        <i class="fa fa-code-fork fa-lg"></i>
-      </button>
-      <button class="btn btn-default btn-sm" ng-click="setActiveTab('debug')" ng-class="{'active' : activeTab.name === 'debug'}" tooltip="Debug Console" tooltip-placement="top">
-        <i class="fa fa-code fa-lg"></i>
-      </button>
-    </div>
+    <div class="context-controls" ng-include="activeTab.controlsTemplate"></div>
 
-    <div class="btn-group">
-      <button class="btn btn-default btn-sm" ng-click="maximized = !maximized">
-        <i class="fa fa-lg" ng-class="{'fa-angle-double-down' : maximized, 'fa-angle-double-up' : !maximized}"></i>
-      </button>
+    <div class="tab-controls">
+      <div class="btn-group">
+        <button class="btn btn-default btn-sm" ng-click="setActiveTab('nodes')" ng-class="{'active' : activeTab.name === 'nodes'}" tooltip="Available Node" tooltip-placement="top" >
+          <i class="fa fa-code-fork fa-lg"></i>
+        </button>
+        <button class="btn btn-default btn-sm" ng-click="setActiveTab('debug')" ng-class="{'active' : activeTab.name === 'debug'}" tooltip="Debug Console" tooltip-placement="top">
+          <i class="fa fa-code fa-lg"></i>
+        </button>
+      </div>
+
+      <div class="btn-group">
+        <button class="btn btn-default btn-sm" ng-click="toggleDrawer()">
+          <i class="fa fa-lg" ng-class="{'fa-angle-double-down' : maximized, 'fa-angle-double-up' : !maximized}"></i>
+        </button>
+      </div>
     </div>
   </div>
 
