--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -4,23 +4,9 @@
   </div>
 
   <div class="flow-toolbar">
-    <div class="btn-group" dropdown is-open="menuIsOpen">
-      <button class="btn btn-default button-shadow dropdown-toggle" tooltip="Menu" tooltip-placement="left" ng-click="menuIsOpen = !menuIsOpen">
-        <i class="fa fa-bars"></i>
-      </button>
-      <ul class="dropdown-menu" role="menu">
-        <li><a href ui-sref="ob.connector.nodes.all">Connect</a></li>
-        <li><a href ui-sref="ob.process">Process</a></li>
-        <li><a href ui-sref="ob.admin.all">Admin</a></li>
-        <li><a href ui-sref="ob.community">Community</a></li>
-      </ul>
-    </div>
 
     <div class="input-group flow-name" dropdown>
       <input type="text" class="form-control" placeholder="Flow Name" ng-model="activeFlow.name">
-      <span class="input-group-addon btn btn-sm btn-danger" ng-click="deleteFlow(activeFlow)" tooltip="Delete Flow" tooltip-placement="bottom">
-        <i class="fa fa-lg fa-trash-o"></i>
-      </span>
       <span class="input-group-addon flow-dropdown" dropdown-toggle>
         <i class="fa fa-lg fa-angle-down"></i>
       </span>
@@ -31,6 +17,12 @@
           <a href>{{flow.name}}</a>
         </li>
       </ul>
+    </div>
+
+    <div class="btn-group">
+      <button class="btn btn-default button-shadow" ng-click="deleteFlow(activeFlow)" tooltip="Delete Flow" tooltip-placement="bottom">
+        <i class="fa fa-lg fa-trash-o"></i>
+      </button>
     </div>
 
 
@@ -44,15 +36,24 @@
     </div>
 
     <div class="btn-group">
-      <button ng-click="restart()" class="btn btn-default button-shadow" tooltip="Restart" tooltip-placement="bottom">
-        <i class="fa fa-repeat"></i>
-      </button>
       <button ng-click="stop()" class="btn btn-default button-shadow" tooltip="Stop" tooltip-placement="bottom">
         <i class="fa fa-stop"></i>
       </button>
       <button ng-click="start()" class="btn btn-default button-shadow" tooltip="Start" tooltip-placement="bottom">
         <i class="fa fa-play"></i>
       </button>
+    </div>
+
+    <div class="btn-group" dropdown is-open="menuIsOpen">
+      <button class="btn btn-default button-shadow dropdown-toggle" tooltip="Menu" tooltip-placement="left" ng-click="menuIsOpen = !menuIsOpen">
+        <i class="fa fa-bars"></i>
+      </button>
+      <ul class="dropdown-menu dropdown-menu-right" role="menu">
+        <li><a href ui-sref="ob.connector.nodes.all">Connect</a></li>
+        <li><a href ui-sref="ob.process">Process</a></li>
+        <li><a href ui-sref="ob.admin.all">Admin</a></li>
+        <li><a href ui-sref="ob.community">Community</a></li>
+      </ul>
     </div>
   </div>
 
