adding OmniBox controller & related tests. Fixed previously failing tests

--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -57,7 +57,7 @@
     </div>
   </div>
 
-  <flow-editor-omnibox flow="activeFlow" flow-node-types="flowNodeTypes"></flow-editor-omnibox>
+  <flow-editor-omnibox flow="activeFlow"></flow-editor-omnibox>
 
   <div class="full-height" ng-mousemove="setMousePosition($event)" ng-mouseout="clearMousePosition()">
     <div class="workspace-container full-height">
