show unconfigured nodes

--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -64,5 +64,5 @@
       <flow-editor flow="activeFlow"></flow-editor>
     </div>
   </div>
-  <flow-browser flow="activeFlow" debug-lines="debugLines" flow-node-types="flowNodeTypes"></flow-browser>
+  <flow-browser flow="activeFlow" debug-lines="debugLines" node-types="nodeTypes" flow-node-types="flowNodeTypes"></flow-browser>
 </div>
