--- a/public/pages/flow-browser.html
+++ b/public/pages/flow-browser.html
@@ -4,8 +4,11 @@
 
     <div class="tab-controls">
       <div class="btn-group">
-        <button class="btn btn-default btn-sm" ng-click="setActiveTab('nodes')" ng-class="{'active' : activeTab.name === 'nodes'}" tooltip="Available Node" tooltip-placement="top" >
+        <button class="btn btn-default btn-sm" ng-click="setActiveTab('nodes')" ng-class="{'active' : activeTab.name === 'nodes'}" tooltip="Configured Nodes" tooltip-placement="top" >
           <i class="fa fa-code-fork fa-lg"></i>
+        </button>
+        <button class="btn btn-default btn-sm" ng-click="setActiveTab('unconfigurednodes')" ng-class="{'active' : activeTab.name === 'unconfigurednodes'}" tooltip="Available Nodes" tooltip-placement="top" >
+          <i class="fa fa-bus fa-lg"></i>
         </button>
         <button class="btn btn-default btn-sm" ng-click="setActiveTab('debug')" ng-class="{'active' : activeTab.name === 'debug'}" tooltip="Debug Console" tooltip-placement="top">
           <i class="fa fa-code fa-lg"></i>
