--- a/public/pages/omnibox-item.html
+++ b/public/pages/omnibox-item.html
@@ -1,7 +1,7 @@
 <div class="omnibox-item flow-node-{{match.model.class}}">
   <div class="media">
     <div class="media-object pull-left">
-      <i class="fa {{match.model.icon}} fa-2x"></i>
+      <img width="40" src="{{match.model.logo}}">
     </div>
     <div class="media-body">
       <h5 class="media-heading">{{match.model.name || match.model.defaults.type}}</h5>
