omnibox can edit nodes again!

--- a/public/pages/flow-editor-omnibox.html
+++ b/public/pages/flow-editor-omnibox.html
@@ -12,8 +12,8 @@
     <button class="btn btn-primary btn-lg">Activate</button>
   </div>
 
-  <div ng-show="flow.selectedFlowNode">
+  <div ng-show="selectedFlowNode">
     <br>
-    <flow-node-editor flow-node="flow.selectedFlowNode" ></flow-node-editor>
+    <flow-node-editor flow-node="selectedFlowNode" ></flow-node-editor>
   </div>
  </div>
