--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -57,7 +57,7 @@
     </div>
   </div>
 
-  <flow-editor-omnibox omni-search="omniSearch" flow-nodes="activeFlow.nodes"></flow-editor-omnibox>
+  <flow-editor-omnibox omni-search="omniSearch" flow-nodes="activeFlow.nodes" selected-flow-node="activeFlow.selectedFlowNode" ></flow-editor-omnibox>
 
   <div class="full-height" ng-mousemove="setMousePosition($event)" ng-mouseout="clearMousePosition()">
     <div class="workspace-container full-height">
