--- a/public/pages/omnibox-item.html
+++ b/public/pages/omnibox-item.html
@@ -5,6 +5,8 @@
     </div>
     <div class="media-body">
       <h5 class="media-heading">{{match.model.name || match.model.defaults.type}}</h5>
+      <p class="text-muted">Belongs to: You</p>
+      <p class="text-muted">{{match.model.name}}</p>
     </div>
   </div>
 </div>
