--- a/public/pages/omnibox-item.html
+++ b/public/pages/omnibox-item.html
@@ -4,9 +4,20 @@
       <img width="40" src="{{match.model.logo}}">
     </div>
     <div class="media-body">
-      <h5 class="media-heading">{{match.model.name || match.model.defaults.type}}</h5>
-      <p class="text-muted">Belongs to: You</p>
-      <p class="text-muted">{{match.model.name}}</p>
+      <div class="col-lg-10">
+        <h5 class="media-heading">{{match.model.name || match.model.defaults.type}}</h5>
+        <p ng-if="!!match.model.defaults.uuid" class="text-muted">
+          Belongs to: You
+          <br>
+          {{match.model.defaults.uuid}}
+        </p>
+        <p ng-if="!match.model.defaults.uuid" class="text-muted">
+          Activate {{match.model.name}} node
+        </p>
+      </div>
+      <div class="col-lg-2">
+        <button ng-if="!match.model.defaults.uuid"  class="btn btn-small btn-primary">+</button>
+      </div>
     </div>
   </div>
 </div>
