--- a/public/pages/omnibox-item.html
+++ b/public/pages/omnibox-item.html
@@ -3,9 +3,12 @@
     <div class="media-object pull-left">
       <img width="40" src="{{match.model.logo}}">
     </div>
-    <div class="media-body">
+    <div class="media-body" ng-include="{{getOmniboxItemTemplate(match.model)}}">
       <div class="col-lg-10">
         <h5 class="media-heading">{{match.model.name || match.model.defaults.type}}</h5>
+        <p ng-if="!!match.model.id" class="text-muted">
+          Click to locate in your flow
+        </p>
         <p ng-if="!!match.model.defaults.uuid" class="text-muted">
           Belongs to: You
           <br>
