--- a/public/pages/omnibox-item-channel.html
+++ b/public/pages/omnibox-item-channel.html
@@ -1,8 +1,4 @@
 <div class="col-lg-10">
     <h5 class="media-heading">{{match.model.name || match.model.defaults.type}}</h5>
-     <p><pre>{{match.model}}</pre></p>
-</div>
-<div class="col-lg-2">
-    <button ng-if="!match.model.defaults.uuid"  class="btn btn-small btn-primary">+</button>
-</div>
+     <small>I'm a channel</small>
 </div>
