--- a/public/pages/flow-editor-omnibox.html
+++ b/public/pages/flow-editor-omnibox.html
@@ -7,9 +7,16 @@
   </div>
 
   <div ng-show="nodeType">
-    <br>
-    <h1>THIS NODE REQUIRES ACTIVATION!!!!!!!!!!</h1>
-    <button class="btn btn-primary btn-lg">Activate</button>
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <h3 class="text-center">This Node requires setup</h3>
+        <p class="text-center">
+          Click Setup to start configuring this node
+        </p>
+        <br>
+        <button class="btn btn-primary btn-lg btn-block">Setup</button>
+      </div>
+    </div>
   </div>
 
   <div ng-show="selectedFlowNode">
