Fix error in nodetype controller

--- a/public/pages/omnibox-item.html
+++ b/public/pages/omnibox-item.html
@@ -4,7 +4,7 @@
       <img width="40" src="{{match.model.logo}}">
     </div>
 
-    <div class="media-body" ng-include="'/pages/omnibox-' + match.model.omniType +'.html'"></div>
+    <div class="media-body" ng-include="'/pages/omnibox-' + match.model.resourceType +'.html'"></div>
     <small>{{'/pages/omnibox-' + match.model.omniType +'.html'}}</small>
   </div>
 </div>
