omnibox recognizes resourceTypes

--- a/public/pages/omnibox-item.html
+++ b/public/pages/omnibox-item.html
@@ -5,6 +5,6 @@
     </div>
 
     <div class="media-body" ng-include="'/pages/omnibox-' + match.model.resourceType +'.html'"></div>
-    <small>{{'/pages/omnibox-' + match.model.omniType +'.html'}}</small>
+    <small>{{'/pages/omnibox-' + match.model.resourceType +'.html'}}</small>
   </div>
 </div>
