--- a/public/pages/omnibox-item.html
+++ b/public/pages/omnibox-item.html
@@ -1,10 +1,9 @@
 <div class="omnibox-item flow-node-{{match.model.class}}">
-  <div class="media">
-    <div class="media-object pull-left">
+  <div class="row">
+    <div class="col-xs-1">
       <img width="40" src="{{match.model.logo}}">
     </div>
 
-    <div class="media-body" ng-include="'/pages/omnibox-' + match.model.resourceType +'.html'"></div>
-    <small>{{'/pages/omnibox-' + match.model.resourceType +'.html'}}</small>
+    <div class="col-xs-11" ng-include="'/pages/omnibox-' + match.model.resourceType +'.html'"></div>
   </div>
 </div>
