--- a/public/pages/omnibox-flow-node-type.html
+++ b/public/pages/omnibox-flow-node-type.html
@@ -1,2 +1,9 @@
-<h4 class="media-heading">{{match.model.name || match.model.defaults.type}}</h4>
-<small>I'm a node that can be added to your flow!</small>
+<div class="row">
+  <div class="col-lg-10">
+    <h4 class="media-heading">{{match.model.name || match.model.defaults.type}}</h4>
+    <small>Add to your flow</small>
+  </div>
+  <div class="col-lg-2">
+    <h4><i class="fa fa-plus fa-lg"></i></h4>
+  </div>
+</div>
