--- a/public/pages/omnibox-flow-node-type.html
+++ b/public/pages/omnibox-flow-node-type.html
@@ -1,9 +1,9 @@
 <div class="row">
   <div class="col-lg-10">
-    <h4 class="media-heading">{{match.model.name || match.model.defaults.type}}</h4>
+    <h4>{{match.model.name || match.model.defaults.type}}</h4>
     <small>Add to your flow</small>
   </div>
   <div class="col-lg-2">
-    <h4><i class="fa fa-plus fa-lg"></i></h4>
+    <h4><i class="fa fa-2x fa-plus"></i></h4>
   </div>
 </div>
