--- a/public/pages/omnibox-node-type.html
+++ b/public/pages/omnibox-node-type.html
@@ -1,2 +1,9 @@
-<h4 class="media-heading">{{match.model.name || match.model.defaults.type}}</h4>
-<small>I'm a node type!</small>
+<div class="row">
+  <div class="col-lg-10">
+    <h4>{{match.model.name || match.model.defaults.type}}</h4>
+    <small>Activate and configure</small>
+  </div>
+  <div class="col-lg-2">
+    <h4><i class="fa fa-2x fa-plug"></i></h4>
+  </div>
+</div>
