--- a/public/pages/omnibox-flow-node.html
+++ b/public/pages/omnibox-flow-node.html
@@ -1,2 +1,12 @@
-<h4 class="media-heading">{{match.model.name || match.model.defaults.type}}</h4>
-<small>I'm a node in your flow!</small>
+<div class="row">
+  <div class="col-xs-10">
+    <h4>{{match.model.name || match.model.defaults.type}}</h4>
+    <small>Select in flow</small>
+  </div>
+
+  <div class="col-xs-2">
+    <h4>
+      <i class="fa fa-2x fa-chevron-right "></i>
+    </h4>
+  </div>
+</div>
