Skinny omni items

--- a/public/pages/omnibox-flow-node-type.html
+++ b/public/pages/omnibox-flow-node-type.html
@@ -3,7 +3,8 @@
     <h4>{{match.model.name || match.model.defaults.type}}</h4>
     <small>Add to your flow</small>
   </div>
+
   <div class="col-lg-2">
-    <h4><i class="fa fa-2x fa-plus"></i></h4>
+    <h4 class="omnibox-action-icon"><i class="fa fa-lg fa-plus"></i></h4>
   </div>
 </div>
