--- a/public/pages/omnibox-flow-node.html
+++ b/public/pages/omnibox-flow-node.html
@@ -5,8 +5,6 @@
   </div>
 
   <div class="col-xs-2">
-    <h4>
-      <i class="fa fa-2x fa-chevron-right "></i>
-    </h4>
+    <h4 class="omnibox-action-icon"><i class="fa fa-lg fa-chevron-right "></i></h4>
   </div>
 </div>
