add menu items, change connect icon

--- a/public/pages/flow-browser.html
+++ b/public/pages/flow-browser.html
@@ -8,7 +8,7 @@
           <i class="fa fa-code-fork fa-lg"></i>
         </button>
         <button class="btn btn-default btn-sm" ng-click="setActiveTab('unconfigurednodes')" ng-class="{'active' : activeTab.name === 'unconfigurednodes'}" tooltip="Available Nodes" tooltip-placement="top" >
-          <i class="fa fa-bus fa-lg"></i>
+          <i class="fa fa-plug fa-lg"></i>
         </button>
         <button class="btn btn-default btn-sm" ng-click="setActiveTab('debug')" ng-class="{'active' : activeTab.name === 'debug'}" tooltip="Debug Console" tooltip-placement="top">
           <i class="fa fa-code fa-lg"></i>
