--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -16,7 +16,7 @@
       <div class="well">
         <h2>
           <a href ui-sref="ob.connector.nodes.all" class="text-normal-color">
-            <i class="fa fa-code-fork fa-2x"></i>&nbsp;
+            <i class="fa fa-plug fa-2x"></i>&nbsp;
             CONNECT
           </a>
         </h2>
