--- a/public/pages/home2.html
+++ b/public/pages/home2.html
@@ -241,7 +241,7 @@ html, body {
     <!--ICON 1-->
     <div class="col-md-3 col-md-offset-0 col-xs-8 col-xs-offset-2 ticket" style="display: block;">
       <div class="s-a" data-effect="frombottom"><!--Animation-->
-        <i class="fa fa-code-fork fa-4x"></i>
+        <i class="fa fa-plug fa-4x"></i>
         <h2 class="parallax-title">Connect</h2>
         <p class="parallax-icon-paragraph">Easily connect devices, people, and systems to a powerful coordination and communications platform.</p>
       </div><!--Animation End-->
