--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -48,10 +48,13 @@
         <i class="fa fa-bars"></i>
       </button>
       <ul class="dropdown-menu dropdown-menu-right" role="menu">
-        <li><a href ui-sref="ob.connector.nodes.all">Connect</a></li>
-        <li><a href ui-sref="ob.process">Process</a></li>
-        <li><a href ui-sref="ob.admin.all">Admin</a></li>
-        <li><a href ui-sref="ob.community">Community</a></li>
+        <li><a href ui-sref="ob.home"><i class="fa fa-home"></i> Home</a></li>
+        <li><a href ui-sref="ob.analyze"><i class="fa fa-bar-chart"></i> Analyze</a></li>
+        <li><a href ui-sref="ob.community"><i class="fa fa-group"></i> Community</a></li>
+        <li><a href ui-sref="ob.connector.nodes.all"><i class="fa fa-plug"></i> Connect</a></li>
+        <li><a href ui-sref="ob.process"><i class="fa fa-tasks"></i> Process</a></li>
+        <li><a href ui-sref="ob.profile"><i class="fa fa-user"></i> Profile</a></li>
+        <li><a href ui-sref="ob.admin.all"><i class="fa fa-lock"></i> Security</a></li>
       </ul>
     </div>
   </div>
