Activate nodes from the designer

--- a/public/pages/flow-editor-omnibox.html
+++ b/public/pages/flow-editor-omnibox.html
@@ -15,7 +15,7 @@
           Click Setup to start configuring this node
         </p>
         <br>
-        <button class="btn btn-primary btn-lg btn-block">Setup</button>
+        <a ui-sref="ob.nodewizard.add({nodeTypeId: nodeType._id})" class="btn btn-primary btn-lg btn-block">Setup</a>
       </div>
     </div>
   </div>
