fix button, add oauth details for node-red on deploy

--- a/public/pages/flow-node-editor.html
+++ b/public/pages/flow-node-editor.html
@@ -1,7 +1,7 @@
 <div class="flow-node-editor flow-node-editor-{{flowNodeType.type}}">
   <div class="node-editor panel panel-default">
     <div class="panel-heading">Edit Node</div>
-    <div class="panel-body">
+    <div class="panel-body panel-scrollable">
       <form class="form">
         <div ng-include="flowNodeType.formTemplatePath"></div>
         <div class="form-group debug-node-form">
