Delay uses milliseconds

--- a/public/assets/node_forms/debounce_form.html
+++ b/public/assets/node_forms/debounce_form.html
@@ -4,6 +4,6 @@
 </div>
 
 <div class="form-group">
-  <label for="interval">Interval (in seconds)</label>
+  <label for="interval">Interval (in milliseconds)</label>
   <input  id="interval" class="form-control" type="number" ng-model="flowNode.interval" required>
 </div>
