--- a/public/assets/node_forms/interval_form.html
+++ b/public/assets/node_forms/interval_form.html
@@ -4,7 +4,7 @@
 </div>
 
 <div class="form-group">
-  <label for="repeat">Interval (in seconds)</label>
+  <label for="repeat">Interval (in milliseconds)</label>
   <input  id="repeat" class="form-control" type="number" ng-model="flowNode.repeat" required>
 </div>
 
