--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -35,8 +35,9 @@
                 </form>
                 <div class='text-center'>
                   <hr class='hr-normal'>
-                  <a href='/forgot'>Forgot your password?</a> /
-                  <a href='/signup'><strong>Sign up!</strong></a>
+                  <a href='/forgot'>Forgot your password?</a>
+                    <!--/-->
+                  <!--<a href='/signup'><strong>Sign up!</strong></a>-->
                 </div>
                 <br>
                 <br>
