--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -35,6 +35,9 @@
     </div>
 
     <div class="btn-group">
+      <button ng-click="restart()" class="btn btn-default button-shadow" tooltip="Restart" tooltip-placement="bottom">
+        <i class="fa fa-refresh"></i>
+      </button>
       <button ng-click="stop()" class="btn btn-default button-shadow" tooltip="Stop" tooltip-placement="bottom">
         <i class="fa fa-stop"></i>
       </button>
