--- a/public/pages/connector/nodes/index.html
+++ b/public/pages/connector/nodes/index.html
@@ -11,6 +11,14 @@
                     </span>
                 </div>
             </div>
+            <div class="form-group">
+                <div class="btn-group btn-group-justified">
+                    <a class="btn btn-primary btn-lg" href ui-sref="ob.nodewizard.addnode">
+                        <i class="fa fa-plus fa-lg"></i>
+                        Add New Node
+                    </a>
+                </div>
+            </div>
         </form>
     </div>
 </div>
