Reordered the links in the designer and added signout to the navigation in the designer.

--- a/public/pages/octoblu.html
+++ b/public/pages/octoblu.html
@@ -29,7 +29,7 @@
                         <li class="divider"></li>
                         <li>
                             <a href ng-click="logout()">
-                                <i class="fa fa-signout"></i> Sign out
+                                <i class="fa fa-sign-out"></i> Sign out
                             </a>
                         </li>
                     </ul>
