Fixing inception of subdevices, updating the jsoneditor version in bower as it contains bug fixes.

--- a/public/pages/connector/devices/detail/index.html
+++ b/public/pages/connector/devices/detail/index.html
@@ -29,7 +29,7 @@
         </div>
 
         <div>
-            <message-grapher device="device.uuid"></message-grapher>
+            <!--<message-grapher device="device.uuid"></message-grapher>-->
         </div>
 
         <section class="col-xs-12">
