--- a/public/pages/connector/devices/detail/messaging.html
+++ b/public/pages/connector/devices/detail/messaging.html
@@ -19,13 +19,13 @@
                 </div>
 
             </div>
-            <div ng-hide="!messageDevice.recipientDevice.subdevices" class="form-group">
+            <div ng-if="messageDevice.recipientDevice.subdevices" class="form-group">
                 <label class="col-sm-2 control-label">SUBDEVICE</label>
                 <div class="col-sm-10">
                     <select ng-model="messageDevice.subdevice" ng-options="subdevice.name for subdevice in messageDevice.recipientDevice.subdevices | orderBy:'name'" class="form-control" id="subdevice"></select>
                 </div>
             </div>
-            <div ng-hide="!messageDevice.schema" class="well">
+            <div ng-if="messageDevice.schema" class="well">
                 <schema-editor control="messageDevice.schemaEditor" schema="messageDevice.schema" model="messageDevice.msg" allow-json-edit="true" additional-properties="true"></schema-editor>
             </div>
             <div class="form-group">
