--- a/public/pages/flow-browser-nodes.html
+++ b/public/pages/flow-browser-nodes.html
@@ -9,7 +9,7 @@
 <hr>
 <h4 class="text-center text-muted">Operators</h4>
 <ul class="flow-browser-nodes">
-    <li class="flow-node-type" ng-repeat="flowNodeType in flowNodeTypes | filter : filterOperators(flowNodeType)">
+    <li class="flow-node-type" ng-repeat="flowNodeType in flowNodeTypes | filter : filterOperators">
         <div class="node-thumbnail"
              style="background-image: url({{flowNodeType.logo}});"></div>
         <label class="text-center">{{flowNodeType.name || flowNodeType.type}}</label>
