--- a/public/pages/endpoint_selector.html
+++ b/public/pages/endpoint_selector.html
@@ -4,18 +4,7 @@
     <select id="selectedEndpoint" ng-model="selectedEndpoint" ng-options="getEndpointLabel(endpoint) for endpoint in resources" class="form-control"></select>
   </div>
 
-  <div class="form-group" ng-repeat="paramDefinition in urlParamDefinitions">
-    <label for="{{paramDefinition.name}}">{{paramDefinition.name}}</label>
-    <input  id="{{paramDefinition.name}}" type="text" class="form-control" ng-model="node.urlParams[paramDefinition.name]">
-  </div>
-
-  <div class="form-group" ng-repeat="paramDefinition in queryParamDefinitions">
-    <label for="{{paramDefinition.name}}">{{paramDefinition.name}}</label>
-    <input  id="{{paramDefinition.name}}" type="text" class="form-control" ng-model="node.queryParams[paramDefinition.name]">
-  </div>
-
-  <div class="form-group" ng-repeat="paramDefinition in bodyParamDefinitions">
-    <label for="{{paramDefinition.name}}">{{paramDefinition.name}}</label>
-    <input  id="{{paramDefinition.name}}" type="text" class="form-control" ng-model="node.bodyParams[paramDefinition.name]">
-  </div>
+  <param-input param-style="url"   model="node.urlParams"   selected-endpoint="selectedEndpoint"></param-input>
+  <param-input param-style="query" model="node.queryParams" selected-endpoint="selectedEndpoint"></param-input>
+  <param-input param-style="body"  model="node.bodyParams"  selected-endpoint="selectedEndpoint"></param-input>
 </div>
