--- a/public/pages/flow-editor-omnibox.html
+++ b/public/pages/flow-editor-omnibox.html
@@ -20,8 +20,11 @@
     </div>
   </div>
 
-  <div ng-show="selectedFlowNode">
+  <div ng-if="selectedFlowNode">
     <br>
-    <flow-node-editor flow-node="selectedFlowNode" ></flow-node-editor>
+    <!-- Force flow-node-editor to reinitialize every time -->
+    <div ng-repeat="flowNode in [selectedFlowNode]">
+      <flow-node-editor flow-node="flowNode" ></flow-node-editor>
+    </div>
   </div>
  </div>
