Sending invites with prefinery works, we still need to add verification to verify the invites.

--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -76,7 +76,18 @@
               </div>
             </div>
           </div>
-          <br /><br /><br /><br />
+          <br />
+          <br />
+          <div class="row">
+              <div class="col-xs-12 col-lg-6">
+                  <a href ui-sref="invitation.request">Request an Invite</a>
+              </div>
+              <div class="col-xs-12 col-lg-6">
+                  <a href ui-sref="invitation.accept">Enter your Invitation Code</a>
+              </div>
+          </div>
+          <br />
+          <br />
 
         </div>
         <div class='login-container-footer'>
