Fix login with github

--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -45,7 +45,7 @@
                 <div class="row text-center">
                   <div class="col-xs-12 col-lg-6">
                     <p>
-                      <a class="btn-lg btn-block btn-github" href="{{getLoginUrl('/auth/github')}}" target="_self">
+                      <a class="btn-lg btn-block btn-github" href="{{getLoginUrl('/api/oauth/github')}}" target="_self">
                         <span class="fa fa-github"> Github</span>
                       </a>
                     </p><br>
