--- a/public/pages/signup.html
+++ b/public/pages/signup.html
@@ -7,7 +7,7 @@
             <div class='row'>
               <div class='col-sm-12'>
                 <div class='text-center'>
-                  <!-- <img width="121" height="31" src="assets/images/logo_lg.svg" /> -->
+                 <pre>{{signupParams}}</pre>
                 </div>
               </div>
             </div>
