twitter login button works!

--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -65,7 +65,7 @@
                   </div>
                   <div class="col-xs-12 col-lg-6">
                     <p>
-                      <a class="btn-lg btn-block btn-twitter" href="{{getLoginUrl('/auth/twitter')}}" target="_self">
+                      <a class="btn-lg btn-block btn-twitter" href="{{getLoginUrl('/api/oauth/twitter')}}" target="_self">
                         <span class="fa fa-twitter"> Twitter</span>
                       </a>
                     </p><br>
