Separating operators from configured nodes, also fixing a bug where you could not add things from the flow browser drawer.

--- a/public/pages/flow-browser.html
+++ b/public/pages/flow-browser.html
@@ -4,6 +4,9 @@
 
     <div class="tab-controls">
       <div class="btn-group">
+          <button class="btn btn-default btn-sm" ng-click="setActiveTab('operators')" ng-class="{'active' : activeTab.name === 'operators'}" tooltip="Operator Nodes" tooltip-placement="top" >
+              <i class="fa fa-plug fa-lg"></i>
+          </button>
         <button class="btn btn-default btn-sm" ng-click="setActiveTab('nodes')" ng-class="{'active' : activeTab.name === 'nodes'}" tooltip="Configured Nodes" tooltip-placement="top" >
           <i class="fa fa-code-fork fa-lg"></i>
         </button>
