--- a/public/pages/flow-browser-operators.html
+++ b/public/pages/flow-browser-operators.html
@@ -1,6 +1,6 @@
-<h4 class="text-center text-muted">Configured Nodes</h4>
+<h4 class="text-center text-muted">Operators</h4>
 <ul class="flow-browser-nodes">
-    <li class="flow-node-type" ng-repeat="flowNodeType in flowNodeTypes | filter : filterNonOperators" ng-click="addFlowNodeType(flowNodeType)">
+    <li class="flow-node-type" ng-repeat="flowNodeType in flowNodeTypes | filter : filterOperators" ng-click="addFlowNodeType(flowNodeType)">
         <div class="node-thumbnail"
              style="background-image: url({{flowNodeType.logo}});"></div>
         <label class="text-center">{{flowNodeType.name || flowNodeType.type}}</label>
