--- a/public/pages/flow-node-editor.html
+++ b/public/pages/flow-node-editor.html
@@ -1,6 +1,15 @@
-<div class="flow-node-editor flow-node-editor-{{flowNodeType.type}}">
+<div class="flow-node-editor flow-node-editor-{{flowNodeType.type}}" ng-if="flowNodeType">
   <div class="node-editor panel panel-default">
-    <div class="panel-heading">Edit Node</div>
+    <div class="panel-heading">
+      <div class="row">
+        <div class="col-xs-10">
+          <h4>Edit Node</h4>
+        </div>
+        <div class="col-xs-2 text-right">
+          <button ng-click="close()" class="btn btn-default btn-sm"><i class="fa fa-close fa-sm"></i></button>
+        </div>
+      </div>
+    </div>
     <div class="panel-body panel-scrollable">
       <form class="form">
         <div ng-include="flowNodeType.formTemplatePath"></div>
