Add google plus registration

--- a/public/pages/signup.html
+++ b/public/pages/signup.html
@@ -66,9 +66,9 @@
                       </a>
                     </p><br>
                   </div>
-                  <div class="col-xs-12 col-lg-6 hidden">
+                  <div class="col-xs-12 col-lg-6">
                     <p>
-                      <a class="btn-lg btn-block btn-google-plus" href="{{getSignupUrl('/auth/google')}}" target="_self">
+                      <a class="btn-lg btn-block btn-google-plus" href="{{getSignupUrl('/api/oauth/google/signup')}}" target="_self">
                         <span class="fa fa-google-plus"> Google+</span>
                       </a>
                     </p><br>
