Login with facebook

--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -58,7 +58,7 @@
                   </div>
                   <div class="col-xs-12 col-lg-6">
                     <p>
-                      <a class="btn-lg btn-block btn-facebook" href="{{getLoginUrl('/auth/facebook')}}" target="_self">
+                      <a class="btn-lg btn-block btn-facebook" href="{{getLoginUrl('/api/oauth/facebook')}}" target="_self">
                         <span class="fa fa-facebook"> Facebook</span>
                       </a>
                     </p><br>
@@ -72,7 +72,7 @@
                   </div>
                   <div class="col-xs-12 col-lg-6">
                     <p>
-                      <a class="btn-lg btn-block btn-google-plus" href="{{getLoginUrl('/auth/google')}}" target="_self">
+                      <a class="btn-lg btn-block btn-google-plus" href="{{getLoginUrl('/api/oauth/google')}}" target="_self">
                         <span class="fa fa-google-plus"> Google+</span>
                       </a>
                     </p><br>
