--- a/public/pages/signup.html
+++ b/public/pages/signup.html
@@ -52,9 +52,9 @@
                       </a>
                     </p><br>
                   </div>
-                  <div class="col-xs-12 col-lg-6 hidden">
+                  <div class="col-xs-12 col-lg-6">
                     <p>
-                      <a class="btn-lg btn-block btn-facebook" href="{{getSignupUrl('/auth/facebook')}}" target="_self">
+                      <a class="btn-lg btn-block btn-facebook" href="{{getSignupUrl('/api/oauth/facebook/signup')}}" target="_self">
                         <span class="fa fa-facebook"> Facebook</span>
                       </a>
                     </p><br>
