--- a/public/pages/connector/nodes/index.html
+++ b/public/pages/connector/nodes/index.html
@@ -31,7 +31,7 @@
             <h4 class="text-center">
                 <a href ng-href="{{nextStepUrl(node)}}" class="">
                     <div title="{{node.name}}" class="node-thumbnail animated-popout"
-                         ng-style="{ 'background-image': 'url(' + logoUrl(node) + ')' }" title="{{node.name}}"
+                         ng-style="{ 'background-image': 'url(' + node.logo + ')' }" title="{{node.name}}"
                          ng-class="{faded: !node.online}"></div>
                     <strong class="muted-link">{{node.name}}</strong>
                 </a>
