--- a/public/pages/flow-browser-unconfigured-nodes.html
+++ b/public/pages/flow-browser-unconfigured-nodes.html
@@ -2,7 +2,7 @@
     <li class="flow-node-type" ng-repeat="flowNodeType in nodeTypes"
         ng-click="addFlowNodeType(flowNodeType)">
         <div class="node-thumbnail"
-             style="background-image: url({{logoUrl(flowNodeType)}});"></div>
+             style="background-image: url({{flowNodeType.logo}});"></div>
         <label class="text-center">{{flowNodeType.name || flowNodeType.type}}</label>
     </li>
 </ul>
