--- a/public/pages/node-wizard/add-node.html
+++ b/public/pages/node-wizard/add-node.html
@@ -21,7 +21,7 @@
   <div ng-repeat="nodeType in nodeTypes | filter: {name:nodeTypeSearch} | orderBy: 'name'" class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
     <h4 class="text-center">
       <a class="" ng-href="{{nextStepUrl(nodeType)}}">
-        <div ng-style="{'background-image': 'url('+logoUrl(nodeType)+')'}" title="{{nodeType.name}}" class="node-thumbnail animated-popout"></div>
+        <div ng-style="{'background-image': 'url('+nodeType.logo+')'}" title="{{nodeType.name}}" class="node-thumbnail animated-popout"></div>
         <strong class="muted-link">{{nodeType.name}}</strong>
       </a>
     </h4>
