fixed page header on analyze and admin

--- a/public/pages/admin/index.html
+++ b/public/pages/admin/index.html
@@ -1,29 +1,23 @@
-<div class='page-header'>
-    <div class="row">
-        <div class="col-xs-12">
-            <h1>
-                <i class='fa fa-lock'></i>
-                Admin
-            </h1>
-        </div>
-        <!--<div class="col-xs-12 col-md-6 text-right">-->
-            <!--<form class="form-inline" role="form" ng-submit="send()">-->
-                <!--<div class="form-group">-->
-                    <!--<label class="sr-only" for="recipientEmail">Email address</label>-->
-                    <!--<div class="input-group">-->
-                        <!--<input type="email" class="form-control" id="recipientEmail" ng-model="recipientEmail" placeholder="Enter email">-->
-                        <!--<span class="input-group-btn">-->
-                            <!--<button class="btn btn-default" type="submit">-->
-                                <!--<i class="fa fa-users"></i> Invite-->
-                            <!--</button>-->
-                        <!--</span>-->
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<div class="form-group">-->
-                <!--</div>-->
-            <!--</form>-->
-        <!--</div>-->
+<style type="text/css">
+    .dashboard-panel {
+        text-align: center;
+    }
+
+    .dashboard-panel h1 {
+        text-decoration: inherit;
+        color: inherit;
+        margin-bottom: 20px;
+    }
+</style>
+
+<div class="col-xs-12">
+    <div class="page-header page-header-with-buttons">
+        <h1>
+            <i class="fa fa-lock"></i>
+            <span>Admin</span>
+        </h1>
     </div>
+
 </div>
 
 <div class="col-xs-12">
