--- a/public/pages/analyze.html
+++ b/public/pages/analyze.html
@@ -1,19 +1,22 @@
-<!-- Made an Edit -->
+<style type="text/css">
+    .dashboard-panel {
+        text-align: center;
+    }
 
-<!---
-COMMENTED OUT FOR WHITESPACE
-<div class='page-header page-header-with-buttons'>
-    <h1>
-        <i class='fa fa-bar-chart-o'></i>
-        <span>Analyze</span>
-    </h1>
-</div>
--->
-<div class="container-fluid">
-    <h1>
-        <i class='fa fa-bar-chart-o'></i>
-        <span>Analyze</span>
-    </h1>
+    .dashboard-panel h1 {
+        text-decoration: inherit;
+        color: inherit;
+        margin-bottom: 20px;
+    }
+</style>
+
+<div class="col-xs-12">
+    <div class="page-header page-header-with-buttons">
+        <h1>
+            <i class="fa fa-bar-chart-o"></i>
+            <span>Analyze</span>
+        </h1>
+    </div>
 
 <tabset>
 <tab heading="Overview">
